# cmcdict

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README.rst  VERSION  cmcdict.env  pixi.toml  pyproject.toml  requirements-dev.txt  setup.py
cmcdict/: __init__.py  cmcdict.py  config.py  dict.xml
cmcdict-2025.3.0/: .gitignore  Makefile  pixi.toml  pyproject.toml
cmcdict-2025.3.0/cmcdict-2025.3.0/: PKG-INFO
cmcdict-2025.3.0/cmcdict-2025.3.0/cmcdict/: __init__.py
cmcdict-2025.3.0/cmcdict-2025.3.0/conda.recipe/: recipe.yaml
cmcdict-2025.3.0/cmcdict-2025.3.0/docs/: cmcdict.rst  nomvar_list.txt
cmcdict-2025.3.0/cmcdict-2025.3.0/ssm/: make_ssm_package.sh
cmcdict-2025.3.0/cmcdict-2025.3.0/test/: cmcdict_test.py  conftest.py
cmcdict-2025.3.0/docs/: index.rst  typvar_list.txt
cmcdict-2025.3.0/test/: special_vars.txt
conda.recipe/: build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml
data/: README.md  metvar_dictionary.parquet  typvar_dictionary.parquet
doc/: README.rst  cmcdict.rst  conf.py  index.rst  intro.rst  nomvar_list.txt  tutorial_nb.ipynb
docs/: conf.py  index.rst  intro.rst  tutorial_nb.ipynb
package_tests/environments/: pixi.toml  test_cmcdict.py
scripts/: clean.sh  create_parquet_backup.py
ssm/: make_ssm_package.sh
test/: cmcdict.py  cmcdict_test.py  compare_ip.sh  convert_ip_test.py  current_vars.txt  manual_test_api.py  pytest.ini  special_vars_raw.txt
