[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmcdict"
dynamic = ["version"]
description = "Python library to work with the CMC operational dictionary"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.8"
authors = [
    {name = "Sebastien Fortier", email = "sebastien.fortier@ec.gc.ca"},
]
maintainers = [
    {name = "Sebastien Fortier", email = "sebastien.fortier@ec.gc.ca"},
]
keywords = ["cmc", "o.dict"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars>=0.18.8",
]

[project.urls]
Homepage = "https://web.science.gc.ca/~spst900/cmcdict/"
Repository = "https://gitlab.science.gc.ca/CMDS/cmcdict"

[tool.hatch.build.targets.wheel]
packages = ["cmcdict"]
include = [
    "data/**/*",
]

[tool.hatch.version]
path = "cmcdict/__init__.py"

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "unit_tests: mark a test as a unit test",
]
addopts = "-vrf"


[project.optional-dependencies]
dev = [
    "myst_parser",
    "nbsphinx",
    "pytest",
    "ruff", 
    "sphinx_autodoc_typehints",
    "sphinx_rtd_theme",
    "Sphinx",
] 
